# lab3-template

./: .gitignore  README.md  pyproject.toml
documents/: sample1.txt
src/retrieval/: __init__.py  main.py
static/: index.html  style.css
tests/: test_smoke.py
